<resources>
    <string name="app_name">Evercard</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_descr">This screen is for beginning of app</string>
    <string name="all_cards">Все</string>
    <string name="favorite_cards">Избранные</string>
    <string name="cleartext">ClearText</string>
    <string name="cardNameString">Название карты</string>
    <string name="new_folder">Новая папка</string>
    <string name="no_cards_found">Нет никаких карт</string>
    <string name="add_folder">Добавление новой папки</string>
    <string name="add_new_folder">Добавить папку</string>
    <string name="settings_header">Настройки</string>
    <string name="theme_name">Тёмная тема</string>
    <string name="theme_light">Светлая тема</string>
    <string name="theme_dark">Тёмная тема</string>
    <string name="theme_carnival">Карнавао)</string>
    <string name="theme_header">Цветовая тема</string>
    <string name="mode_header">Отображение карт</string>
    <string name="mode_list">Список</string>
    <string name="mode_carousel">Карусель</string>
    <string name="settings_button_content_descr">Settings button</string>
    <string name="enter_card_title">Введите название карты</string>
    <string name="new_card_title">Название*</string>
    <string name="new_card_comment">Комментарий</string>
    <string name="enter_description">Введите описание (необязательно)</string>
</resources>