<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    android:padding="16dp"
    tools:context=".features.settings.ui.SettingsFragment">

    <!-- Вертикальные Guideline слева и справа -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/MyAwesomeToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:iconTint="?attr/colorOnSurface"
        app:title="@string/settings_header" />

    <TextView
        android:id="@+id/themeHeader"
        style="@style/TextMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/theme_header"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <!-- Карточка с выбором темы -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/themeCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/themeHeader"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:layout_marginTop="16dp">

        <RadioGroup
            android:id="@+id/themeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:padding="16dp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:padding="16dp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioCarnival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_carnival"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:padding="16dp" />

        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/modeHeader"
        style="@style/TextMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/mode_header"
        app:layout_constraintTop_toBottomOf="@+id/themeCardView"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <!-- Кнопки выбора режима отображения -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/modeHeader"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd">

        <!-- Кнопка Список -->
        <include
            android:id="@+id/listModeButton"
            layout="@layout/button_list_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp" />

        <!-- Кнопка Карусель -->
        <include
            android:id="@+id/carouselModeButton"
            layout="@layout/button_carousel_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>