<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorSurface"
    android:paddingTop="24dp"
    tools:context=".features.add_edit_card.ui.AddEditCardFragment">

    <!-- Вертикальные Guideline слева и справа -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/MyAwesomeToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:iconTint="?attr/colorOnSurface"
        app:title="Добавление карты" />

    <TextView
        android:id="@+id/nameHeader"
        style="@style/TextMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/enter_card_title"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newCardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:hint="@string/new_card_title"
        app:layout_constraintTop_toBottomOf="@id/nameHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newCardEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:fontFamily="@font/ys_display_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/new_card_shape"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/new_pl_image_placeholder"
        android:cropToPadding="true"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/newCardName"
        app:shapeAppearanceOverlay="@style/CardImageRoundedCorner"/>

    <TextView
        android:id="@+id/descriptionHeader"
        style="@style/TextMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/enter_description"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newCardDescription"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/descriptionHeader"
        android:hint="@string/new_card_comment"
        app:placeholderText="Описание карты (необязательно)"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newCardEditDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:singleLine="false"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textMultiLine"
            android:fontFamily="@font/ys_display_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>